// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden frames portland fixture at lg 120x40: lg 120x40 1`] = `
"┌─locations · l──────────┐tuiweather / Portland                                                      Wed Sep 2  5:45 AM 
│ T U I W E A T H E R    │45.5°, -122.7°  ·  synced just now                                                            
│ your window outside    │┌─ observatory ──────────────────────────────────────────────────────────────────────────────┐
│                        ││ CURRENT CONDITIONS                            ATMOSPHERE                                   │
│● Portland ☀️ 58°       ││ ██▀▀▀▀▀▀  ██▀▀▀▀██°F               .──.       humidity 82%          dew pt   53°           │
│── now · m ──────────── ││ ▀▀▀▀▀▀██  ██▀▀▀▀██                / .´        pressure 29.78 inHg   gusts    6 mph         │
│Dry                     ││ ▄▄▄▄▄▄██  ██▄▄▄▄██                │ (   ·     uv       --           vis      --            │
│                        ││ ☀️ Clear sky                      \\ \`─.       sunrise  6:33 AM      sunset   7:46 PM       │
│                        ││ feels like 57°                     \`──´       wind     4 mph S                             │
│                        ││ ↑ 6:33 AM ○──────────────────────────────────────────────────────────────────── ↓ 7:46 PM  │
│                        ││ go out    5–9 PM · dry · 58° · light wind · uv 0                                           │
│                        ││ heads up  9 AM–5 PM · heavy rain · 0.36 in/h · gusts 37 mph                                │
│                        ││                                                                                            │
│                        ││ ▰ next 48h · ☂ 92% 12p ─────────────────────────────────────────────────────────────────   │
│                        ││ temp       ▅64°    ▁▁                                         ▂▅▁                          │
│                        ││          ▃████▆▇█▇▆███▆▄▄▄▂▂▂                            ▂▄▅▅████▅▄▂                       │
│                        ││      ▇▆▅█████████████████████▇▄▃▁▃                    ▅▆▇███████████▆▅▄▂                   │
│                        ││      █████████████████████████████▆▁▂▄▅▆▄▂53°▁▂▃▂▂▄▆▅▅████████████████████▇███▇▇▆▄▄▅▆▅▅▅▄  │
│                        ││ rain         ▄▅▅▅▅▄▄▅▅▇▇▇▅       ▄▃        ▄▅▅▅ ▂▃▂ ▅▅          ▄▅▄ ▃▂      ▃▄▃            │
│                        ││      uv 4 · rh 62–91% · vis 3.3 mi                                                         │
│                        ││      6a            2p            10p           6a            2p            10p             │
│                        ││                                                                                            │
│                        ││ ▰ 14 day · page 1/2 ────────────────────────────────────────────────────────────────────   │
│                        ││ ╭─────────╮ ╭─────────╮ ╭─────────╮ ╭─────────╮ ╭─────────╮ ╭─────────╮ ╭─────────╮        │
│                        ││ │ Wed ☔️  │ │ Thu 🌧️  │ │ Fri 🌦️  │ │ Sat ☁️  │ │ Sun ☁️  │ │ Mon ⛅️  │ │ Tue ☁️  │        │
│                        ││ │64° high │ │62° high │ │71° high │ │78° high │ │79° high │ │82° high │ │75° high │        │
│                        ││ │53° low  │ │53° low  │ │55° low  │ │53° low  │ │58° low  │ │58° low  │ │57° low  │        │
│                        ││ │██······ │ │██······ │ │████···· │ │█████··· │ │·████··· │ │·█████·· │ │·███···· │        │
│                        ││ │☂ 92%    │ │☂ 70%    │ │☂ 25%    │ │☂ 17%    │ │☂ 26%    │ │☂ 22%    │ │☂ 10%    │        │
│                        ││ ╰─────────╯ ╰─────────╯ ╰─────────╯ ╰─────────╯ ╰─────────╯ ╰─────────╯ ╰─────────╯        │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│                        ││                                                                                            │
│── today ────────────── ││                                                                                            │
│53° ████··········· 64° ││                                                                                            │
│☂ 92% · 0.66 in         │└────────────────────────────────────────────────────────────────────────────────────────────┘
└────────────────────────┘←→ day · v view · / search · r refresh · u units · [ ]/l locations · ↑↓ scroll · ? help · …   
"
`;

exports[`golden frames portland fixture at narrow-lg 100x40: narrow-lg 100x40 1`] = `
"┌─locations · l──────────┐tuiweather / Portland                                  Wed Sep 2  5:45 AM 
│ T U I W E A T H E R    │45.5°, -122.7°  ·  synced just now                                        
│ your window outside    │┌─ observatory ──────────────────────────────────────────────────────────┐
│                        ││ CURRENT CONDITIONS        ATMOSPHERE                                   │
│● Portland ☀️ 58°       ││ ██▀▀▀▀▀▀  ██▀▀▀▀██°F      humidity 82%          dew pt   53°           │
│                        ││ ▀▀▀▀▀▀██  ██▀▀▀▀██        pressure 29.78 inHg   gusts    6 mph         │
│                        ││ ▄▄▄▄▄▄██  ██▄▄▄▄██        uv       --           vis      --            │
│                        ││ ☀️ Clear sky              sunrise  6:33 AM      sunset   7:46 PM       │
│                        ││ feels like 57°            wind     4 mph S                             │
│                        ││ ↑ 6:33 AM ○──────────────────────────────────────────────── ↓ 7:46 PM  │
│                        ││ go out    5–9 PM · dry · 58° · light wind · uv 0                       │
│                        ││ heads up  9 AM–5 PM · heavy rain · 0.36 in/h · gusts 37 mph            │
│                        ││                                                                        │
│                        ││ ▰ next 48h · ☂ 92% 12p ─────────────────────────────────────────────   │
│                        ││ temp     ▆63°▂ ▁▃▂                              ▂▆▂                    │
│                        ││        ▁▄█████████▇▅▅▃▃                      ▅▆████▅▄                  │
│                        ││      █▇█████████████████▄▂▃               ▁▇█████████▇▆▃▁              │
│                        ││      ██████████████████████▆▁▄▅▅▄53°▂▃▂▄▆▅███████████████████▇▆▅▅▆▆▅▅  │
│                        ││ rain       ▄▅▅▅▄▄▅▇▇▅     ▃▃      ▄▅▅ ▂▂ ▅▅       ▄▄ ▃▂    ▃▄          │
│                        ││      uv 4 · rh 62–91% · vis 3.3 mi                                     │
│                        ││      6a        1p        9p        4a        12p       7p        3a    │
│                        ││                                                                        │
│                        ││ ▰ 14 day · page 1/2 ────────────────────────────────────────────────   │
│                        ││ Wed ☔️ 53° █████████························· 64° ☂ 92% · 0.66 in      │
│                        ││ Thu 🌧️ 53° ████████·························· 62° ☂ 70% · 0.29 in      │
│                        ││ Fri 🌦️ 55° ·██████████████··················· 71° ☂ 25% · 0.00 in      │
│                        ││ Sat ☁️ 53° █████████████████████············· 78°                      │
│                        ││ Sun ☁️ 58° ·····█████████████████············ 79° ☂ 26%                │
│                        ││ Mon ⛅️ 58° ·····████████████████████········· 82° ☂ 22%                │
│                        ││ Tue ☁️ 57° ···███████████████················ 75°                      │
│                        ││                                                                        │
│                        ││                                                                        │
│                        ││                                                                        │
│                        ││                                                                        │
│                        ││                                                                        │
│                        ││                                                                        │
│                        ││                                                                        │
│                        ││                                                                        │
│                        │└────────────────────────────────────────────────────────────────────────┘
└────────────────────────┘←→ day · v view · / search · r refresh · u units · [ ]/l locations · ↑…   
"
`;

exports[`golden frames portland fixture at md 80x24: md 80x24 1`] = `
"tuiweather / Portland                                        Wed Sep 2  5:45 AM 
45.5°, -122.7°  ·  synced just now                                              
┌─ observatory ────────────────────────────────────────────────────────────────┐
│ CURRENT CONDITIONS              ATMOSPHERE                                   │
│ ██▀▀▀▀▀▀  ██▀▀▀▀██°F            humidity 82%          dew pt   53°           │
│ ▀▀▀▀▀▀██  ██▀▀▀▀██              pressure 29.78 inHg   gusts    6 mph         │
│ ▄▄▄▄▄▄██  ██▄▄▄▄██              uv       --           vis      --            │
│ ☀️ Clear sky                    sunrise  6:33 AM      sunset   7:46 PM       │
│ feels like 57°                  wind     4 mph S                             │
│ ↑ 6:33 AM ○────────────────────────────────────────────────────── ↓ 7:46 PM  │
│ go out    5–9 PM · dry · 58° · light wind · uv 0                             │
│ heads up  9 AM–5 PM · heavy rain · 0.36 in/h · gusts 37 mph                  │
│                                                                              │
│ ▰ next 48h · ☂ 92% 12p ───────────────────────────────────────────────────   │
│ temp      ▇64°   ▁▁                                  ▂▁                      │
│         ▃████▇█▇███▆▄▄▃▂▂                       ▂▄▅▇███▅▄                    │
│      ▇▆██████████████████▇▃▁▂                ▁▅▆██████████▅▄▂                │
│      ████████████████████████▆▁▂▅▆▅▂53°▂▃▂▄▆▅█████████████████▇███▇▆▄▄▅▆▅▅▄  │
│ rain        ▄▅▅▅▄▄▅▇▇▇▄     ▃▃       ▄▅▅ ▂▂ ▅▅        ▄▅▄▂▂     ▃▄▃          │
│      uv 4 · rh 62–91% · vis 3.3 mi                                           │
│      6a         1p         9p         4a         12p        8p         3a    │
│                                                                       ↓ more │
└──────────────────────────────────────────────────────────────────────────────┘
←→ day · v view · r refresh · l locations · ↑↓ scroll · ? help                  
"
`;

exports[`golden frames portland fixture at sm 60x20: sm 60x20 1`] = `
"Portland · Wed 2 · 5:45 AM                                  
tuiweather / your window outside                            
┌─ observatory ────────────────────────────────────────────┐
│ 58° Clear sky · feels like 57°                           │
│ 4 mph S · humidity 82%                                   │
│ ↑ 6:33 AM ○────────────────────────────────── ↓ 7:46 PM  │
│                                                          │
│ ▰ next 12h · ☂ 92% 12p ───────────────────────────────   │
│ temp       ▂▂64°                                         │
│            ████  ▃▃  ▅▅▃▃                                │
│          ▃▃████████▇▇████▃▃▃▃                            │
│      ▄▄57°███████████████████                            │
│ rain           ▅▅▅▅▄▄▄▄▅▅▇▇▅▅                            │
│      6a  8a  10a 12p 2p  4p                              │
│                                                          │
│ ▰ 14 day · page 1/2 ──────────────────────────────────   │
│ Wed ☔️ 53° █████··············· 64° ☂ 92% · 0.66 in      │
│                                                   ↓ more │
└──────────────────────────────────────────────────────────┘
v day · r refresh · ↑↓ scroll · ? · q quit                  
"
`;

exports[`golden frames portland fixture at xs 40x12: xs 40x12 1`] = `
"Portland · 5:45 AM                      
                                        
┌─ observatory ────────────────────────┐
│ 58° Clear sky · fl 57°               │
│                                      │
│ ▂▁▄▇█▅▆▅▆▆▄▄                         │
│                                      │
│ Wed☔️64° Thu🌧️62° Fri🌦️71° Sat☁️78…  │
│                                      │
└──────────────────────────────────────┘
                                        
v r u ? q                               
"
`;

exports[`golden frames portland fixture at md 80x24 with 24h clock and mixed units: md 80x24 mixed 24h 1`] = `
"tuiweather / Portland                                          Wed Sep 2  05:45 
45.5°, -122.7°  ·  synced just now                                              
┌─ observatory ────────────────────────────────────────────────────────────────┐
│ CURRENT CONDITIONS              ATMOSPHERE                                   │
│   ▄▄██    ██    ██°C            humidity 82%          dew pt   11°           │
│     ██    ██▄▄▄▄██              pressure 29.78 inHg   gusts    6 mph         │
│   ▄▄██▄▄        ██              uv       --           vis      --            │
│ ☀️ Clear sky                    sunrise  06:33        sunset   19:46         │
│ feels like 14°                  wind     4 mph S                             │
│ ↑ 06:33 ○────────────────────────────────────────────────────────── ↓ 19:46  │
│ go out    17–21 · dry · 14° · light wind · uv 0                              │
│ heads up  09–17 · heavy rain · 0.36 in/h · gusts 37 mph                      │
│                                                                              │
│ ▰ next 48h · ☂ 92% 12 ────────────────────────────────────────────────────   │
│ temp      ▇18°   ▁▁                                  ▂▁                      │
│         ▃████▇█▇███▆▄▄▃▂▂                       ▂▄▅▇███▅▄                    │
│      ▇▆██████████████████▇▃▁▂                ▁▅▆██████████▅▄▂                │
│      ████████████████████████▆▁▂▅▆▅▂12°▂▃▂▄▆▅█████████████████▇███▇▆▄▄▅▆▅▅▄  │
│ rain        ▄▅▅▅▄▄▅▇▇▇▄     ▃▃       ▄▅▅ ▂▂ ▅▅        ▄▅▄▂▂     ▃▄▃          │
│      uv 4 · rh 62–91% · vis 3.3 mi                                           │
│      06         13         21         04         12         20         03    │
│                                                                       ↓ more │
└──────────────────────────────────────────────────────────────────────────────┘
←→ day · v view · r refresh · l locations · ↑↓ scroll · ? help                  
"
`;

exports[`golden frames portland fixture at sm 60x20 with 24h header clock and mixed units: sm 60x20 mixed 24h 1`] = `
"Portland · Wed 2 · 05:45                                    
tuiweather / your window outside                            
┌─ observatory ────────────────────────────────────────────┐
│ 14° Clear sky · feels like 14°                           │
│ 4 mph S · humidity 82%                                   │
│ ↑ 06:33 ○────────────────────────────────────── ↓ 19:46  │
│                                                          │
│ ▰ next 12h · ☂ 92% 12 ────────────────────────────────   │
│ temp       ▂▂18°                                         │
│            ████  ▃▃  ▅▅▃▃                                │
│          ▃▃████████▇▇████▃▃▃▃                            │
│      ▄▄14°███████████████████                            │
│ rain           ▅▅▅▅▄▄▄▄▅▅▇▇▅▅                            │
│      06  08  10  12  14  16                              │
│                                                          │
│ ▰ 14 day · page 1/2 ──────────────────────────────────   │
│ Wed ☔️ 12° █████··············· 18° ☂ 92% · 0.66 in      │
│                                                   ↓ more │
└──────────────────────────────────────────────────────────┘
v day · r refresh · ↑↓ scroll · ? · q quit                  
"
`;
